--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 		<link rel="stylesheet" href="assets/css/style.css">	
 	</head>
 	<body>
+	 <section id="bienvenida">
+	  <div class="logo" src="assets/img/logo.png" alt="logo">
+	  </div>
+	  <div class="mensaje">
+	   <img class="mensaje" src="assets/img/bienvenida.png" alt="">
+	   </div>
+	</section>
 
 	</body>
 </html>
