--- a/index.html
+++ b/index.html
@@ -14,6 +14,75 @@
 	   <img class="mensaje" src="assets/img/bienvenida.png" alt="">
 	   </div>
 	</section>
+	<section class="color">
+	<div class="newsletter">
+	<button id="suscribirse">Suscríbete a nuestro newsletter</button>
+	</div>
+	<section id="about">
+	 <div class="logo">
+	  <img class="logo" src="assets/img/logo.png"
+	  alt="logo"> 
+	 </div>
+     <div class="contenido">
+      <h1>Nuestra<br>Pasion</h1>
+      <p>El té es una bebida utilizada habitualmente por la medicina natural de las civilizaciones orientales para aprovechar sus propiedades terapéuticas. Algunas de sus versiones son:</p>
+	</div>
+	</section>
+	<section class="color">
+		<div class="te-diferentes">
+		<div class="tipo-de-te">
+		  <h2>Negro</h2>
+		  <p>Disminuye la absorción de colesterol y reduce la posibilidad de sufrir enfermedades cardiovasculares.</p>
+	    </div>
+
+		<div class="tipo-de-te">
+		  <h2>Verde</h2>
+		  <p>Reduce la formación de coágulos anormales favoreciendo nuestro corazón,además disminuye los niveles de azúcar.
+		  </p>
+		</div>
+
+		<div class="tipo-de-te">
+		  <h2>Rojo</h2>
+		  <p>Para la depresión, la melancolía y el mal humor. Adicionalmente facilita la digestión, ayuda a desintoxicar el organismo.</p>
+		  </div>
+
+		<div class="tipo-de-te">
+		  <h2>Blanco</h2>
+		  <p>Disminuye la actividad de las enzimas que disminuyen la produccion de elastina y colágeno en nuestra piel.</p>
+		</div>
+
+		<div class="tipo-de-te">
+		  <h2>Oolong</h2>
+		  <p>Puede disminuir el nivel de colesterol en la sangre y también está recomendado para bajar de peso.</p>
+		</div>
+		</div>
+		</section>
+
+		<section id="disfruta">
+			<div class="logo">
+				<img class="logo" src="assets/img/logo.png" alt="logo">
+			</div>
+
+			<div class="contenido">
+			 <h1>Disfruta <br> el sabor del té</h1>
+			</div>
+		</section>
+
 
 	</body>
+
+	<footer>
+		<p>Té Encanto: Av.Italia 1317, Providencia.</p>
+	</footer>
+
+<br>
+<div class="titulo h1">
+		  <h2>¿TE GUSTA EL TÉ?</h2><br>
+		  <h3>Nombre</h3>
+
+
+
+		  		</div>
+		
+
 </html>
