--- a/index.html
+++ b/index.html
@@ -68,21 +68,38 @@
 			</div>
 		</section>
 
-
-	</body>
-
-	<footer>
+		<footer>
 		<p>Té Encanto: Av.Italia 1317, Providencia.</p>
 	</footer>
 
-<br>
-<div class="titulo h1">
+	  <br><br>
+		<div class="titulo h1">
 		  <h2>¿TE GUSTA EL TÉ?</h2><br>
 		  <h3>Nombre</h3>
+			</div>
 
+	<input id="text1" type="text" placeholder="Escibe tu nombre">
+	<br><br>
 
+	<div class="titulo h1">
+		  <h3>Email</h3>
+			</div>
 
-		  		</div>
+	<input id="text1" type="text" placeholder="Escibe tu email">
+	<br><br>
+
+		<div class="titulo h1">
+		  <h3>Direccion</h3>
+			</div>
+
+	<input id="text1" type="text" placeholder="Escibe tu direccion">
+
+	</body>
+
+	
+
+	  
+
 		
 
 </html>
