--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 	<input id="text1" type="text" placeholder="Escibe tu nombre">
 	<br><br>
 
+
 	<div class="titulo h1">
 		  <h3>Email</h3>
 			</div>
@@ -93,11 +94,28 @@
 			</div>
 
 	<input id="text1" type="text" placeholder="Escibe tu direccion">
+	<br><br>
 
+	<div class="texto2">
+		  <h3>Té favorito</h3>
+			</div>
+
+	<br>
+
+	<button onclick="myFunction()">Selecciona tu té</button>
 	</body>
+	<br><br>
 
+<div class="texto3">
+		  <h3>Quiero recibir muestras gratis</h3>
+			</div>
+<br>
 	
+<div class="texto3">
+		  <h3>Suscribete a nuestro newslette</h3>
+			</div>
 
+	<br>
 	  
 
 		
